hphp/hack/test/typecheck/stricter_consts/interface_class_interface_class_1.bad.php
<?hh
// Copyright (c) Facebook, Inc. and its affiliates. All Rights Reserved.

interface IA {
 const string ONCALL = "a";
}

interface IB {
  const string ONCALL = "b";
}

class A implements IA {}

final class B extends A implements IB {}
